--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,8 @@
 services:
   jekyll:
-    image: jekyll/builder:latest
+    image: jekyll/jekyll:latest
     volumes:
       - ./:/srv/jekyll
-    command: sh -c 'bundle install && bundle exec jekyll serve --watch --host 0.0.0.0'
+    command: sh -c 'bundle install && bundle exec jekyll serve --livereload --host 0.0.0.0'
     ports:
       - 4000:4000
