--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ jobs:
   deploy:
     permissions:
       id-token: write
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
