--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,9 @@ services:
     image: jekyll/jekyll:latest
     volumes:
       - ./:/srv/jekyll
-    command: sh -c 'bundle install && bundle exec jekyll serve --livereload --host 0.0.0.0'
+    command: >
+      sh -c 'bundle install && 
+      ruby yaml_to_s3_json_config_converter.rb && 
+      bundle exec jekyll serve --livereload --host 0.0.0.0'
     ports:
       - 4000:4000
