--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,5 @@ jobs:
         run: bundle exec jekyll build
       - name: Deploy to S3
         run: >
-          aws s3 sync _site/ s3://${{ secrets.S3_BUCKET }} --exclude compose.yml --exclude README.md --delete &&
+          aws s3 sync _site/ s3://${{ secrets.S3_BUCKET }} --exclude compose.yml --exclude README.md --exclude *.json --exclude *.rb --delete &&
           aws s3api put-bucket-website --bucket ${{ secrets.S3_BUCKET }} --website-configuration file://s3_config.json
