--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 s3:
   index: "index.html"
   error: "error.html"
+  redirects:
+    - path: /sections
+      destination: https://cs50.harvard.edu/college/2023/fall/sections/
