Add course details, publications

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,6 @@
 - name: Teaching
   link: /
 - name: OpenCourseWare
-  link: /courses.html
+  link: /courses/
+- name: Publications
+  link: /publications/
