--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,3 +31,6 @@ jobs:
         run: >
           aws s3 sync _site/ s3://${{ secrets.S3_BUCKET }} --exclude compose.yml --exclude README.md --exclude *.json --exclude *.rb --delete &&
           aws s3api put-bucket-website --bucket ${{ secrets.S3_BUCKET }} --website-configuration file://s3_config.json
+      - name: Invalid CloudFront Distribution
+        run: >
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
