Update section titles

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: Teaching
   link: /
-- name: OpenCourseWare
+- name: Courses
   link: /courses/
-- name: Publications
+- name: Publications & Presentations
   link: /publications/
