--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,5 @@ s3:
       destination: https://carterzenke.me/workshops/2024/fall/emerging-pedagogies/Generative-AI-and-Pedagogical-Innovation.pdf
     - path: /ohhellogpt
       destination: https://docs.google.com/presentation/d/1099T-tP4C0nGmlI0VMbdJvyP_nmyKbMoxNhfkOp3c4s/edit?usp=sharing
+    - path: /section0
+      destination: https://padlet.com/carter97/e-151-section-0-lyj98viyqbtzi2zu
