--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,5 @@ s3:
       destination: https://docs.google.com/presentation/d/1099T-tP4C0nGmlI0VMbdJvyP_nmyKbMoxNhfkOp3c4s/edit?usp=sharing
     - path: /section0
       destination: https://padlet.com/carter97/e-151-section-0-lyj98viyqbtzi2zu
+    - path: /section1
+      destination: https://docs.google.com/presentation/d/131KU2xPWo8r1iP2z_98p_YENGV1LWYcp-2phyuh_wpA/copy
